# MileStone

./: CMakeLists.txt  Command.cpp  Command.h  ExpressionFactory.cpp  ExpressionFactory.h  InfixHandler.cpp  InfixHandler.h  Lexer.cpp  Lexer.h  Maps.cpp  Maps.h  Parser.cpp  Parser.h  ServerReader.cpp  ServerReader.h  ServerReaderArguments.cpp  ServerReaderArguments.h  ServerUpdater.cpp  ServerUpdater.h  SocketBooleans.cpp  SocketBooleans.h  TestsBackup.txt  VarBindMap.cpp  details.txt  fly backup.txt  fly.txt  main.cpp
Command/: Bind.cpp  Bind.h  BindCommand.cpp  BindCommand.h  Command.h  ConditionCommand.cpp  ConditionCommand.h  Connect.cpp  Connect.h  ConnectCommand.cpp  ConnectCommand.h  Equals.cpp  Equals.h  EqualsCommand.cpp  EqualsCommand.h  ExitCommand.cpp  ExitCommand.h  If.cpp  If.h  IfCommand.cpp  IfCommand.h  OpenDataServer.cpp  OpenDataServer.h  OpenDataServerCommand.cpp  OpenDataServerCommand.h  Print.cpp  Print.h  PrintCommand.cpp  PrintCommand.h  ServerReader.cpp  ServerReader.h  SleepCommand.cpp  SleepCommand.h  Var.cpp  Var.h  VarCommand.cpp  VarCommand.h  While.cpp  While.h  WhileCommand.cpp  (+1 more)
Expression/: BiggerEqualsExpression.cpp  BiggerEqualsExpression.h  BiggerExpression.cpp  BiggerExpression.h  BinaryExpression.cpp  BinaryExpression.h  Divide.cpp  Divide.h  DivideExpression.cpp  DivideExpression.h  EqualsExpression.cpp  EqualsExpression.h  Expression.h  ExpressionTest.cpp  ExpressionTest.h  Minus.cpp  Minus.h  MinusExpression.cpp  MinusExpression.h  Multiply.cpp  Multiply.h  MultiplyExpression.cpp  MultiplyExpression.h  NegateExpression.cpp  NegateExpression.h  NumExpression.cpp  NumExpression.h  Plus.cpp  PlusExpression.cpp  PlusExpression.h  SmallerEqualsExpression.cpp  SmallerEqualsExpression.h  SmallerExpression.cpp  SmallerExpression.h  VarExpression.cpp  VarExpression.h
